--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["David AW Barton <david.barton@bristol.ac.uk>"]
 version = "0.1.0"
 
 [deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 
 [compat]
